--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,2 @@
-opencv-python>=4.5.0
-tensorflow>=2.8.0
-numpy>=1.21.0
-pillow>=8.3.0
-scikit-learn>=1.0.0
-pyinstaller>=4.10
+pip install opencv-python
+pip install pillow
