--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
+conda create -n imsv3 python=3.10
+conda activate imsv3
+conda install -c conda-forge cudatoolkit=11.2 cudnn=8.1.0
+python -m pip install "tensorflow==2.10"
+conda install -c nvidia cuda-nvcc
 pip install opencv-python
 pip install scipy
 pip install pillow
